# FrankaGrasp

./: .gitignore  .gitmodules  .ycm_extra_conf.py  README.md  add_agile_grasp.sh  approach.txt  arrow.py  axis.txt  center.txt  configure.sh  data.txt  ee_position_2018-07-18-15-58-07.bag  surface_center.txt
agile_grasp_sources/: franka_grasp.cpp  panda_localizer.cpp  panda_localizer.h
data_/: approach.data  axis.data  center.data  surface.data
doc/: franka_ring12_piolo3_bbFIX.ttt
doc/graspdemounknownobjects/: DescriptionPR2GraspingDemo.txt  start_demo_pr2.launch
doc/graspdemounknownobjects/Trigger/: manifest.xml
doc/graspdemounknownobjects/calc_grasppoints_svm/: .pydevproject  README  cmake_install.cmake
doc/graspdemounknownobjects/graspingDemoTUWUObjects/: manifest.xml
doc/graspdemounknownobjects/grasping_rectangle/: CMakeLists.txt  filters.txt  mainpage.dox  manifest.xml  runnew.sh
doc/graspdemounknownobjects/grasping_rectangle/src/: Rect.cpp  SVMDataGenerator.h  Utility.h  baseline.cpp  common.cpp  common.h  feature.cpp  feature.h  histogram.cpp  lala.cpp  point_cloud_feature_test.cpp.orig  point_cloud_feature_test.h  rank_main.cpp  showRect.cpp  test.cpp  test.cpp.orig  testUtil.h  test_point_cloud_features.cpp
doc/graspdemounknownobjects/grasping_rectangle/src/.svn/: all-wcprops  entries
doc/graspdemounknownobjects/grasping_rectangle/src/.svn/text-base/: Rect.h.svn-base  SVMDataGenerator.cpp.svn-base  Search.cpp.svn-base  Search.h.svn-base  Utility.cpp.svn-base  boostTraining.cpp.svn-base  calcRectIntersection.cpp.svn-base  calcRectIntersection.h.svn-base  centroid_grasp.cpp.svn-base  extractTrainingData.h.svn-base  extract_point_cloud_training_data.cpp.svn-base  filterRect.cpp.svn-base  histogram.h.svn-base  indent.sh.svn-base  main.cpp.svn-base  point_cloud_feature_test.cpp.svn-base  testBackgroundSubtraction.cpp.svn-base  testModel.h.svn-base  thr_pool.cpp.svn-base  thr_pool.h.svn-base  thr_pool_main.cpp.svn-base
doc/graspdemounknownobjects/grasping_rectangle/src/svm/.svn/: all-wcprops  entries
doc/graspdemounknownobjects/joint_states_listener/: manifest.xml
doc/graspdemounknownobjects/openrave_ctrl/: .cproject  .project  .pydevproject  cmake_install.cmake  mainpage.dox  manifest.xml
doc/graspdemounknownobjects/pc_to_iv/: .cproject  .project  CMakeCache.txt  cmake_install.cmake  mainpage.dox  manifest.xml
doc/graspdemounknownobjects/pr2_fridge/: .cproject  .project  CMakeCache.txt  CMakeLists.txt  Makefile  README  cmake_install.cmake  mainpage.dox
doc/graspdemounknownobjects/toolsdf/: .cproject  .project  .pydevproject  CMakeLists.txt  cmake_install.cmake  manifest.xml
doc/graspdemounknownobjects/toolsdf/.svn/: all-wcprops  entries
doc/graspdemounknownobjects/toolsdf/.svn/text-base/: CMakeLists.txt.svn-base  mainpage.dox.svn-base  manifest.xml.svn-base
doc/graspdemounknownobjects/toolsdf/include/: pc_merge_with_basket_rot.hpp
doc/graspdemounknownobjects/toolsdf/include/.svn/: all-wcprops  entries
doc/graspdemounknownobjects/toolsdf/include/.svn/text-base/: PCLFunctions.hpp.svn-base  pc_merge_with_basket_rot.hpp.svn-base
doc/graspdemounknownobjects/toolsdf/include/toolsdf/.svn/: all-wcprops  entries
doc/graspdemounknownobjects/toolsdf/launch/: pc_merge_1cam_nobox.launch
doc/graspdemounknownobjects/toolsdf/launch/.svn/: all-wcprops  entries
doc/graspdemounknownobjects/toolsdf/launch/.svn/text-base/: pc_merge.launch.svn-base  pc_merge_1cam_nobox.launch.svn-base  pc_merge_2cams.launch.svn-base  preprocessing.launch.svn-base
doc/graspdemounknownobjects/toolsdf/src/: intimage_to_featurevec.cpp  pc_merge_1cam_nobox.cpp
doc/graspdemounknownobjects/toolsdf/src/.svn/: all-wcprops  entries
doc/graspdemounknownobjects/toolsdf/src/.svn/text-base/: cp_from_many_files_to_one.cpp.svn-base  edit_featurefile.cpp.svn-base  feature_creator.cpp.svn-base  heightsgrid_to_intimage.cpp.svn-base  pc_cut.cpp.svn-base  pc_inverse_z.cpp.svn-base  pc_merge.cpp.svn-base  pc_merge_1cam_nobox.cpp.svn-base  pc_merge_2cams_nobox.cpp.svn-base  pc_merge_with_basket.cpp.svn-base  pc_merge_with_basket_rot.cpp.svn-base  pc_merge_with_basket_rot_2cams.cpp.svn-base  pc_mirror.cpp.svn-base  pcd_to_heightsgrid.cpp.svn-base  preprocessing.cpp.svn-base  svmoutput_to_matrix.cpp.svn-base  viewgrids.cpp.svn-base
install/: .rosinstall  _setup_util.py  setup.sh
install/include/agile_grasp/: CloudSized.h  FindGrasps.h  FindGraspsRequest.h  FindGraspsResponse.h  Grasp.h  Grasps.h  grasp_localizer.h  grasp_localizer_server.h  hand_search.h
install/lib/pkgconfig/: agile_grasp.pc  agile_grasp_panda.pc  panda_moveit_config2.pc
install/share/agile_grasp/: package.xml
install/share/agile_grasp/cmake/: agile_grasp-msg-extras.cmake  agile_grasp-msg-paths.cmake  agile_graspConfig.cmake
install/share/agile_grasp/launch/: hsrb_agile_grasp.launch
install/share/agile_grasp/srv/: FindGrasps.srv
install/share/agile_grasp_panda/: package.xml
install/share/panda_moveit_config2/: package.xml
matlab/: ee_position.bag  ee_position_aziz.bag  ee_position_duz.bag  ee_position_error_moveit.bag  pcd.m  pcd.m~  pcd_sample.m  pick_and_place_pub.cpp  plot_bag.m  ring12sample.fig  total.fig  total.pcd
matlab/01_09_06_02_01_standard/: approach.data  axis.data  center.data  surface.data
matlab/with_piolo/: approach.data  axis.data  center.data  surface.data
rings/: Torus.ply
src/agile_grasp_panda/: CMakeLists.txt  package.xml
src/agile_grasp_panda/data/: franka_ring12_piolo3_bbFIX.ttt  franka_ring12_piolo3_ray.ttt  single_cylinder005.ply
src/agile_grasp_panda/launch/: algorithm.launch  launch_all.launch  moveit.rviz  moveit_rviz.launch  rviz.launch  (+2 more)
src/datattt/: franka_rings.ttt
src/gpd_bridge/: CMakeLists.txt  package.xml
src/grasp/: CMakeLists.txt  package.xml
src/node/: CMakeLists.txt  package.xml
src/panda_moveit_config2/: .setup_assistant  CMakeLists.txt  package.xml
src/panda_moveit_config4/: .setup_assistant  CMakeLists.txt  package.xml
src/panda_moveit_config5/: .setup_assistant  CMakeLists.txt  package.xml
src/prova/: CMakeLists.txt  package.xml
(+397 files in other folders)
