<?xml version="1.0"?>
<package>
  <name>agile_grasp</name>
  <version>0.8.3</version>
  <description>
    The agile_grasp ROS package. AGILE stands for Antipodal Grasp
    Identification and LEarning. The package finds antipodal grasps in
    point clouds.

    This fork is used for research work at UTexas, Austin, with thanks
    to Andreas ten Pas.  Most other groups should use his original
    repository, instead.
  </description>
  <maintainer email="jack.oquin@gmail.com">Jack O'Quin</maintainer>
  <license>BSD</license>
  <url type="website">http://wiki.ros.org/agile_grasp</url>
  <author>Andreas ten Pas</author>
  
  <buildtool_depend>catkin</buildtool_depend>
 
  <build_depend>cmake_modules</build_depend>
  <build_depend>eigen_conversions</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>liblapack-dev</build_depend>
  <build_depend>libpcl-all-dev</build_depend>
  <build_depend>message_generation</build_depend>   
  <build_depend>opencv3</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf_conversions</build_depend>  
  <build_depend>visualization_msgs</build_depend>
  
  <run_depend>cmake_modules</run_depend>
  <run_depend>eigen_conversions</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>liblapack-dev</run_depend>
  <run_depend>libpcl-all</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>opencv3</run_depend>
  <run_depend>pcl_conversions</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>  
  <run_depend>tf_conversions</run_depend>  
  <run_depend>visualization_msgs</run_depend>

</package>
